fix: text wrapping

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -140,6 +140,11 @@ nav ul li:hover a {
   overflow: hidden;
 }
 
+.resto-item .desc {
+  height: 160px;
+  overflow: hidden;
+}
+
 .thumbnail-item {
   position: relative;
 }
